the first section block is completed

--- a/index.html
+++ b/index.html
@@ -85,5 +85,40 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="container hero-container">
+          <div class="hero-left">
+            <span class="hero-icon-text">
+              <i class="icon-player"></i> In every beginning, there is chaos.
+            </span>
+            <h1 class="hero-title">Peaceful shopping – Mindful money</h1>
+            <p class="hero-desc">
+              See how we can help with making your shopping experience and money
+              management more ZEN.
+            </p>
+            <div class="hero-buttons">
+              <img
+                class="hero-button"
+                src="images/appstore.png"
+                alt="Download on the App Store"
+              />
+              <img
+                class="hero-button"
+                src="images/googleplay.png"
+                alt="Get it on Google Play"
+              />
+            </div>
+          </div>
+          <div class="hero-right">
+            <img
+              src="images/kart.png"
+              alt="Zen app interface"
+              class="hero-img"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
