finished thief block section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,25 @@
           </div>
         </div>
       </section>
+      <section class="hero">
+        <div class="container hero-container">
+            <div class="hero-right">
+                <img src="images/pay.png" alt="Payment illustration" class="hero-img">
+            </div>
+            <div class="hero-left">
+                <h2 class="hero-title">1-year warranty boost</h2>
+                <p class="hero-desc">
+                    ZEN cards have a very neat feature that will help you whenever
+                    your electronic devices start failing after the standard warranty
+                    ends, which is pretty common.
+                </p>
+                <p class="hero-desc">
+                    When you buy any electronics with your ZEN shopping Mastercard®,
+                    their warranty gets extended by one year. How does it work? It
+                    simply does. Automatically.
+                </p>
+            </div>
+        </div>
     </main>
   </body>
 </html>
