the second section block is completed

--- a/index.html
+++ b/index.html
@@ -121,23 +121,53 @@
       </section>
       <section class="hero">
         <div class="container hero-container">
-            <div class="hero-right">
-                <img src="images/pay.png" alt="Payment illustration" class="hero-img">
-            </div>
-            <div class="hero-left">
-                <h2 class="hero-title">1-year warranty boost</h2>
-                <p class="hero-desc">
-                    ZEN cards have a very neat feature that will help you whenever
-                    your electronic devices start failing after the standard warranty
-                    ends, which is pretty common.
-                </p>
-                <p class="hero-desc">
-                    When you buy any electronics with your ZEN shopping Mastercard®,
-                    their warranty gets extended by one year. How does it work? It
-                    simply does. Automatically.
-                </p>
-            </div>
+          <div class="hero-right">
+            <img
+              src="images/pay.png"
+              alt="Payment illustration"
+              class="hero-img"
+            />
+          </div>
+          <div class="hero-left">
+            <h2 class="hero-title">1-year warranty boost</h2>
+            <p class="hero-desc">
+              ZEN cards have a very neat feature that will help you whenever
+              your electronic devices start failing after the standard warranty
+              ends, which is pretty common.
+            </p>
+            <p class="hero-desc">
+              When you buy any electronics with your ZEN shopping Mastercard®,
+              their warranty gets extended by one year. How does it work? It
+              simply does. Automatically.
+            </p>
+          </div>
         </div>
+      </section>
+      <section class="about">
+        <div class="container about-container">
+          <div class="about-left">
+            <img src="images/pay2.png" alt="About ZEN Care" class="hero-righ" />
+          </div>
+          <div class="about-right">
+            <h2 class="about-title">ZEN Care</h2>
+            <p>
+              Shopping online is usually a delightful experience. Until it's
+              not.
+            </p>
+            <p>
+              Until something you buy proves to be faulty, missing, or a totally
+              wrong item, you're in for long product return procedures.
+            </p>
+            <p>
+              But, here comes ZEN Care: a free, built-in shopping protection.
+              You can rest assured we'll handle all transaction-related problems
+              faster and with higher success rates. Where lone consumers can be
+              ignored or dumped by dishonest merchants, ZEN doesn't get
+              discouraged. ZEN persists.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
