the third section block is completed

--- a/index.html
+++ b/index.html
@@ -168,6 +168,21 @@
           </div>
         </div>
       </section>
+      <section class="services">
+        <div class="container">
+          <div class="services-top">
+            <h2 class="services-title">and cashback!</h2>
+            <p class="services-subtitle">
+              It saves a little bit of money while you’re shopping, but in many
+              cases, it takes ages to get anything out of it. We gave it a
+              thought and made cashback way more friendly. Up to 14% of what you
+              spend using ZEN Mastercard® will materialize on your account right
+              after the purchase. It's like you haggled some cash, despite you
+              didn't have to. Just don't forget to use the in-app cashback link.
+            </p>
+            <a href="#" class="btn hero-btn">Show more partners</a>
+          </div>
+      </section>
     </main>
   </body>
 </html>
