completed icon block

--- a/index.html
+++ b/index.html
@@ -183,6 +183,30 @@
             <a href="#" class="btn hero-btn">Show more partners</a>
           </div>
       </section>
+      <section class="company-icons">
+        <div class="company-row">
+          <img
+            src="images/booking.svg"
+            alt="Booking.com"
+            class="company-icon"
+          />
+          <img
+            src="images/alixpress.svg"
+            alt="AliExpress"
+            class="company-icon"
+          />
+          <img src="images/allergo.svg" alt="Allegro" class="company-icon" />
+          <img
+            src="images/zalando.svg"
+            alt="Zalando Lounge"
+            class="company-icon"
+          />
+          <img src="images/lodi.svg" alt="Lidl" class="company-icon" />
+          <img src="images/media.svg" alt="MediaMarkt" class="company-icon" />
+          <img src="images/euro.svg" alt="RTV EURO AGD" class="company-icon" />
+          <img src="images/groupon.svg" alt="Groupon" class="company-icon" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
