fourth block completed

--- a/index.html
+++ b/index.html
@@ -207,6 +207,41 @@
           <img src="images/groupon.svg" alt="Groupon" class="company-icon" />
         </div>
       </section>
+    </section>
+    <section class="hero">
+      <div class="container hero-container">
+        <div class="hero-left">
+          <h2 class="hero-title">ZEN shopping Mastercard</h2>
+          <p class="hero-desc">
+            You shouldn’t be bound to use one card at a time, especially when
+            it has so many benefits! With ZEN, you can manage your shopping
+            and finances with both physical and virtual cards. It’s
+            convenient, streamlined, and works like a charm. You can have a
+            shopping card, a subscription card, and whatever other cards make
+            sense to you.
+          </p>
+          <div class="hero-buttons">
+            <img
+              class="hero-button"
+              src="images/appstore.png"
+              alt="Download on the App Store"
+            />
+            <img
+              class="hero-button"
+              src="images/googleplay.png"
+              alt="Get it on Google Play"
+            />
+          </div>
+        </div>
+        <div class="hero-right">
+          <img
+            src="images/karta.png"
+            alt="Zen app interface"
+            class="hero-img"
+          />
+        </div>
+      </div>
+    </section>
     </main>
   </body>
 </html>
