--- a/index.html
+++ b/index.html
@@ -242,6 +242,39 @@
         </div>
       </div>
     </section>
+    <section class="about-section">
+      <div class="about-container">
+        <div class="about-image">
+          <img src="images/delivery.png" alt="Телефон">
+        </div>
+        <div class="about-text">
+          <h2>Shopping with no fees</h2>
+          <p>Online shopping is flawed with all kind of fees. Currency exchange fees, processing fees and even fees for having multiple fees. Getting rid of them became our hobby. Same goes for ATM withdrawal fees.</p>
+          <p>Enjoy your money globally. Every part of it. Keep reading. ZEN goes beyond shopping with a fully functional account.</p>
+        </div>
+      </div>
+    </section>
+    
+    <section class="hero">
+      <div class="container hero-container">
+        <div class="hero-left">
+          <h1 class="hero-title">One app, one account, many currencies</h1>
+          <p class="hero-desc">
+            ZEN Mastercard® was made for spending money. ZEN account is here to store and manage it peacefully, from the inside of your pocket.
+          </p>
+          <p class="hero-desc">
+            You can use it just like a regular account, as it has its own IBAN and works just the way any bank account would — but better. Store up to 30 currencies and transfer them easily in many ways.
+          </p>
+        </div>
+        <div class="hero-right">
+          <img
+            src="images/pay3.png"
+            alt="Zen app interface"
+            class="hero-img"
+          />
+        </div>
+      </div>
+    </section>
     </main>
   </body>
 </html>
