comleted third section

--- a/index.html
+++ b/index.html
@@ -275,6 +275,27 @@
         </div>
       </div>
     </section>
+  </section>
+  <section class="hero">
+    <div class="container hero-container">
+      <div class="hero-right">
+        <img
+          src="images/food fee.png"
+          alt="Payment illustration"
+          class="hero-img"
+        />
+      </div>
+      <div class="hero-left">
+        <h2 class="hero-title">Quick and easy account creation</h2>
+        <p class="hero-desc">
+          Now, you might be thinking that it’s just like any other account creation… Long, tiresome and full of endless blanks to fill in. Well, it’s not.
+        </p>
+        <p class="hero-desc">
+          We have designed the whole process to make it the simplest and the shortest one ever conceived for a personal account. Download the app and see for yourself!y.
+        </p>
+      </div>
+    </div>
+  </section>
     </main>
   </body>
 </html>
