footer block completed

--- a/index.html
+++ b/index.html
@@ -296,6 +296,49 @@
       </div>
     </div>
   </section>
+  <footer>
+    <hr class="small-line">
+      <div class="top-section">
+          <a href="#">Learn</a>
+          <a href="#">Discover</a>
+          <a href="#">Offer</a>
+          <a href="#">Language</a>
+          <a href="#">Follow us</a>
+          <a href="#">Contact</a>
+      </div>
+      <div class="top-section">
+        <a href="#">Help center</a>
+        <a href="#">For developers</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Business</a>
+        <a href="#">Englishs</a>
+        <a href="#">
+          <img src="images/Frame (9).png" alt="#">
+        </a>
+        <a href="#">hello@zen.com</a>
+    </div>
+    <div class="top-section">
+      <a href="#">Join ZEN team</a>
+      <a href="#">For developers</a>
+      <a href="#"></a>
+      <a href="#">Business</a>
+      <a href="#">Englishs</a>
+
+    </div>
+
+      </div>
+      <div class="bottom-section">
+          <div class="logo">
+              <img src="images/Group (4).png" alt="ZEN Logo">
+          </div>
+          <p>
+              ZEN.COM is a licensed financial institution under the supervision of the Central Bank of Lithuania approved by European Banking Authority for 31 countries. Registration number of the company: 304749651, VAT ID LT100011743916. License of electronic money institutions number LB000457. Share capital: 2,185,000.00 EUR. Company address: Mėnulio g. 5, LT-04326, Vilnius, Lithuania. Sales Office: ul. Emilii Plater 53, 00-113 Warsaw, Poland.
+          </p>
+          <div class="pci">
+              <img src="images/Group (5).png" alt="PCI DSS Certified Service Level 1">
+          </div>
+      </div>
+  </footer>
     </main>
   </body>
 </html>
